# Yamaguchi-platform

./: .dockerignore  .env.docker  .gitignore  CMakeLists.txt  Dockerfile  Mainwindow.ui  README.md  WINDOWS_BUILD.md  act.py  build_windows.bat  convert_icon.ps1  deploy.sh  deploy_windows.ps1  docker-compose.prod.yml  docker-compose.yml  generate_placeholder.ps1  info  main.cpp  mainwindow.cpp  mainwindow.h  pull-from-upstream.sh  push-to-upstream.sh  pyproject.toml  requirements-prod.txt  requirements.txt  restart_and_update.sh  restart_recovery.sh  start-server.sh  subtrees.config  订单系统测试表格.md
.migration_backup_20251231_205712/: 0001_initial.py
AppleStockChecker/: admin.py  dashboard_serializers.py  filters.py  models.py  urls.py  views.py
DNS/: build.bat  cert_manager.py  dns_config.py  main.py  requirements.txt
YamagotiProjects/: asgi.py  settings.py  wsgi.py
app/: main.py  tasks_task2.py  tasks_task3.py
application/: common.php  route.php
auto/: requirements.txt
auto-notebook/: Order-gmail.ipynb  Proxy-Pool.ipynb  rename-pl.ipynb  seed-web-data copy.ipynb  seed-web-data.ipynb
auto-script/: wiki-price.py
config/: celery.py  settings_backup.py  urls.py
dashboard/: README.md  docker-compose.yml  setup-env.sh
dataapp/: .env.example  QUICKSTART.md  caddy-local-root-ca.crt  docker-compose.yml
dedktoptools/: .gitignore
desktopapp/: .gitignore  mainwindow.cpp
dev/: .gitignore  README.md  cleanup-old-logs.sh  (+1 more)
iphone-auto/backend/: pyproject.toml
iphone-auto/backend/app/: config.py  database.py  models.py
iphone-auto/backend/app/api/: tasks.py
iphone-auto/backend/app/cli/: main.py
(+598 files in other folders)
