[project]
name = "iphone-device-farm"
version = "0.1.0"
description = "iPhone Device Farm - Control 5 iPhones from a Mac"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pymobiledevice3>=4.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "typer>=0.14.0",
    "rich>=13.0.0",
    "websockets>=13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
iphone-farm = "app.cli.main:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
